# open-space-toolkit

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tutorial_wanted.md
.github/workflows/: benchmark-validation.yml  build-base-image.yml  build-dev-image.yml  build-image.yml  build-packages.yml  build-test.yml  build.yml  release.yml  test.yml
binder/: postBuild  requirement.txt  requirements.txt  runtime.txt  start
docker/: README.md
docker/debian/: Dockerfile
docker/development/: Dockerfile
docker/development/debian/: Dockerfile
docker/development/fedora/: Dockerfile
docker/fedora/: Dockerfile
docker/jupyter/: Dockerfile
docker/jupyter-web/: Dockerfile  cloudbuild.yaml
docker/jupyter/shortcuts-extension/: plugin.jupyterlab-settings
docs/: FAQ.md  Use Cases.md
logo/: logo.ai
notebooks/: Flight Dynamics Test.ipynb
notebooks/Astrodynamics/Cross Platform Validation/: OSTk Cross Platform Validation (Mission Sequence Scenario 2).ipynb  OSTk Cross Platform Validation (Mission Sequence Scenario 3).ipynb  OSTk Cross Platform Validation (Mission Sequence Scenario 4).ipynb
notebooks/Astrodynamics/Flight Dynamics/: Access Computation.ipynb  Constant Thrust Dynamics.ipynb  Custom Event Condition.ipynb  Find RF Interference Accesses.ipynb  Orbit Computation.ipynb  Orbit Determination.ipynb  Target Tracking.ipynb  Visualize Satellite Trajectory (Cesium).ipynb
notebooks/Astrodynamics/Mission Analysis/: Constant Flux and Geomagnetic Index NRLMSISE-00.ipynb  Nadir Tracking (With Yaw Compensation).ipynb  QLaw Examples.ipynb  QLaw-examples.ipynb  Station-Keeping Sequence [QLaw].ipynb  Station-Keeping Sequence.ipynb  Station-keeping Sequence.ipynb  Target Tracking (With Yaw Compensation).ipynb  render.html
notebooks/Astrodynamics/Orbit Computation/: Access Computation.ipynb  Constant Thrust Dynamics.ipynb  Custom Event Condition.ipynb  Custom Window Generation.ipynb  Find RF Interference Accesses.ipynb  Lagrange Points Computation CR3BP.ipynb  Orbit Computation.ipynb  Untitled.ipynb  Visualize Satellite Trajectory (Cesium).ipynb
notebooks/Astrodynamics/Sensor Modeling/: Area Coverage.ipynb  Sensor Modeling.ipynb
notebooks/Coordinate Conversion/: ECEF to LLA.ipynb  ECI to ECEF.ipynb  LLA to ECEF.ipynb
notebooks/Cross Platform Validation/: OSTk Cross Platform Validation (Field Data Generation Scenario 1).ipynb  OSTk Cross Platform Validation (Mission Sequence Scenario 2).ipynb  OSTk Cross Platform Validation (Mission Sequence Scenario 3).ipynb  OSTk Cross Platform Validation (Mission Sequence Scenario 4).ipynb  OSTk Cross Platform Validation (Mission Sequence Scenarios 1).ipynb  OSTk Cross Platform Validation (Mission Sequence Scenarios 2).ipynb
notebooks/Cross Platform Validation/data/: scenario001-mission-sequence.yaml  scenario002-mission-sequence.yaml  scenario003-mission-sequence.yaml  scenario004-mission-sequence.yaml
notebooks/Environment Modeling/: Gravitational Models Comparison.ipynb  Magnetic Model Plot.ipynb  Magnetic Models Comparison.ipynb
notebooks/Environment Modeling/Gravitational Modeling/: Gravitational Model Plotting.ipynb  Gravitational Models Comparison.ipynb
notebooks/Environment Modeling/Magnetic Modeling/: Magnetic Models Comparison.ipynb
notebooks/Mission Analysis/: Constant Flux and Geomagnetic Index NRLMSISE-00.ipynb  QLaw-examples.ipynb  Station-Keeping Sequence [QLaw].ipynb  Station-keeping Sequence.ipynb
notebooks/Object Tracking/: Moon Tracking.ipynb
notebooks/Orbit Computation/: Access Computation.ipynb  Constant Thrust Dynamics.ipynb  Custom Event Condition.ipynb  Custom Window Generation.ipynb  Find RF Interference Accesses.ipynb  Orbit Computation.ipynb
notebooks/Orbit Determination/: Orbit Determination using Gauss Method.ipynb  Orbit Determination using Gibbs Method.ipynb  Orbit Determination using Unscented Kalman Filter.ipynb
notebooks/Orbit Determination/data/: gps_2021070209270000Z_202107020930000Z.csv
notebooks/Orbit Propagation/: Access Computation.ipynb  Constellation Orbit Computation.ipynb  Hohmann Transfer Orbit Visualization.ipynb  Orbit Computation.ipynb
notebooks/Physics/: Lagrange Points Computation CR3BP.ipynb  Sensor Projection.ipynb
notebooks/Physics/Coordinate Conversion/: LLA to ECEF.ipynb
notebooks/Physics/Cross Platform Validation/: OSTk Cross Platform Validation (Field Data Generation Scenario 1).ipynb
notebooks/Satellite Simulation/: Data Downlink Profile Computation.ipynb  Power Profile Computation.ipynb
notebooks/Sensor Modeling/: Area Coverage.ipynb  Sensor Modeling.ipynb  Sensor Projection.ipynb  Sensor Revisit Rate.ipynb
notebooks/Time Conversion/: Convert Time.ipynb
notebooks/Two Lines Elements/: Compare TLEs.ipynb  Sanitize TLE.ipynb
template/: .gitignore  CMakeLists.txt  Makefile  README.md
template/bindings/python/: CMakeLists.txt  README.md  requirements.txt
template/bindings/python/src/: LibraryPy.cxx
template/bindings/python/src/LibraryPy/: MyClass.cpp
template/bindings/python/test/: test_myclass.py
template/bindings/python/tools/cmake/: FindBoostNumPy.cmake  UninstallTarget.cmake.in
template/bindings/python/tools/python/: setup.py.in
template/docs/: CMakeLists.txt  Tutorial.md  index.html
template/test/: Global.test.hpp  Main.test.cxx  Setup.test.hpp
template/tools/: .env
template/tools/ci/: binaries.sh  coverage.sh  deploy.sh  documentation.sh  test.sh
template/tools/cmake/: CodeCoverage.cmake  LibraryConfig.cmake.in  LibraryConfigVersion.cmake.in  UninstallTarget.cmake.in
template/tools/development/: exec.sh  start.sh
template/tools/development/docker/: Dockerfile  build.sh
template/tools/development/helpers/: build.sh  clean.sh  debug.sh  test.sh
template/tools/python/3.6/: .env  Dockerfile  build.sh
template/tools/python/3.7/: .env  Dockerfile  build.sh
tools/: .env
tools/development/: exec.sh  start.sh
tools/development/docker/: Dockerfile  build.sh  push.sh
(+36 files in other folders)
